@@ -11,6 +11,7 @@ Version 6.4.6 - not yet released
   - sort airspaces properly in the airspace list dialog (#2528)
 * infoboxes
   - fixes broken wind arrow display in some situations (#2295)
+  - fix font scaling on screen rotation change (Android/Linux OpenGL)
 * data files
   - fixed arc airspace approximation threshold handling (#2360)
 
